infra/ailab/apps/asset-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asset-api
  namespace: gpmidi-ml
  labels:
    app: asset-api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: asset-api
