infra/ailab/apps/asset-api/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-asset-api
  namespace: gpmidi-ml
spec:
  podSelector:
    matchLabels:
      app: asset-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - port: 8000
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: reference-time
    ports:
    - port: 8000
      protocol: TCP
